<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.atomos</groupId>
		<artifactId>atomos</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>atomos.framework</artifactId>
	<name>atomos.framework</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<repositories>
		<repository>
			<id>atomos-temp-m2repo</id>
			<url>https://github.com/tjwatson/atomos-temp-m2repo/raw/master/repository</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.atomos.osgi.frameworks.equinox</groupId>
			<artifactId>atomos.osgi.framework</artifactId>
			<version>${atomos.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.gogo.runtime</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>java8</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<executions>
							<execution>
								<id>default-compile</id>
								<configuration>
									<!-- compile everything with the default to ensure module-info is 
										correct -->
									<release>${java.version}</release>
								</configuration>
							</execution>
							<!-- compile the packages that must work with java 8 -->
							<execution>
								<id>java8-compile</id>
								<goals>
									<goal>compile</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>module-info.java</exclude>
										<exclude>org/atomos/framework/modules/*.java</exclude>
									</excludes>
									<release combine.self="override"></release>
									<source>1.8</source>
									<target>1.8</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>

				<configuration>
					<argLine>--add-opens java.base/java.net=org.apache.felix.framework</argLine>
				</configuration>
			</plugin>
			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.atomos.framework.AtomosRuntime</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- work around until maven-jar-plugin supports main-class attribute 
					for module-info.class -->
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<target>
								<exec executable="${java.home}/bin/jar" failonerror="true">
									<arg value="--main-class" />
									<arg value="org.atomos.framework.AtomosRuntime" />
									<arg value="--module-version" />
									<arg value="0.0.1" />
									<arg value="--update" />
									<arg value="--file" />
									<arg
										value="${project.build.directory}/${project.artifactId}-${project.version}.jar" />
								</exec>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
